<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <LinearLayout
        android:id="@+id/Layout_nomeArticolo"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:fontFamily="@font/poppins_regular"
            android:text="@string/label_modificaCarico_nome"
            android:textAlignment="center" />

        <Spinner
            android:id="@+id/new_nome_articolo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:textAlignment="center" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/Layout_quan_unita"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:fontFamily="@font/poppins_regular"
            android:text="@string/label_modificaCarico_quantita"
            android:textAlignment="center" />

        <EditText
            android:id="@+id/new_quantita"
            android:layout_width="25sp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:autofillHints="@string/hint_modificaCarico_quantita"
            android:ems="10"
            android:hint="@string/hint_modificaCarico_quantita"
            android:inputType="none|number"
            android:textAlignment="center" />

        <TextView
            android:id="@+id/label_unita_misura"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:textAlignment="center" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/Layout_data"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:fontFamily="@font/poppins_regular"
            android:text="@string/label_modificaCarico_data"
            android:textAlignment="center" />

        <EditText
            android:id="@+id/new_data"
            android:layout_width="100sp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:autofillHints="@string/hint_modificaCarico_data"
            android:ems="10"
            android:hint="@string/hint_modificaCarico_data"
            android:inputType="date"
            android:textAlignment="center" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/Layout_ora"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:fontFamily="@font/poppins_regular"
            android:text="@string/label_modificaCarico_ora"
            android:textAlignment="center" />

        <EditText
            android:id="@+id/new_ora"
            android:layout_width="100sp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:ems="10"
            android:inputType="time"
            android:autofillHints="@string/hint_modificaCarico_ora"
            android:hint="@string/hint_modificaCarico_ora"
            android:textAlignment="center" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/Layout_firma"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/textView5"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:fontFamily="@font/poppins_regular"
            android:text="@string/label_modificaCarico_firma"
            android:textAlignment="center" />

        <EditText
            android:id="@+id/new_firma"
            android:layout_width="100sp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:ems="10"
            android:autofillHints="@string/hint_modificaCarico_firma"
            android:hint="@string/hint_modificaCarico_firma"
            android:inputType="textPersonName"
            android:textAlignment="center" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/Layout_note"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/textView6"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:fontFamily="@font/poppins_regular"
            android:text="@string/label_modificaCarico_note"
            android:textAlignment="center" />

        <EditText
            android:id="@+id/new_note"
            android:layout_width="100sp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:ems="10"
            android:autofillHints="@string/hint_modificaCarico_note"
            android:hint="@string/hint_modificaCarico_note"
            android:inputType="textPersonName"
            android:textAlignment="center" />

    </LinearLayout>

</LinearLayout>