<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ImageView
        android:id="@+id/logo_chiodo"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:contentDescription="@string/logo_chiodo"
        android:foregroundGravity="center"
        android:scaleType="fitCenter"
        android:textAlignment="center"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHeight_percent="0.2"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintWidth_percent="0.4"
        android:src="@drawable/logo_chiodo" />

    <LinearLayout
        android:id="@+id/layout_search"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/logo_chiodo">

        <SearchView
            android:id="@+id/search_bar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:autofillHints="@string/search_bar_hint_articolo"
            android:focusable="false"
            android:fontFamily="@font/poppins_medium"
            android:foregroundGravity="center"
            android:gravity="center"
            android:hint="@string/search_bar_hint_articolo"
            android:iconifiedByDefault="false"
            android:inputType="text"
            android:queryHint="@string/search_bar_hint_articolo"
            android:textAlignment="center"
            android:textColor="#000000"
            android:textSize="30sp"
            app:iconifiedByDefault="false"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/logo_chiodo" />

        <SearchView
            android:id="@+id/search_date"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:autofillHints="@string/search_bar_hint_articolo"
            android:focusable="false"
            android:fontFamily="@font/poppins_medium"
            android:foregroundGravity="center"
            android:gravity="center"
            android:hint="@string/search_bar_hint_articolo"
            android:iconifiedByDefault="false"
            android:inputType="date"
            android:queryHint="@string/search_bar_hint_articolo"
            android:textAlignment="center"
            android:textColor="#000000"
            android:textSize="30sp"
            app:iconifiedByDefault="false"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/logo_chiodo" />


    </LinearLayout>

    <com.google.android.material.tabs.TabLayout
        android:id="@+id/tab_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:scrollbarSize="10sp"
        android:textAlignment="center"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/layout_search"
        app:tabGravity="fill"
        app:tabIndicatorColor="@color/orange"
        app:tabMaxWidth="0dp"
        app:tabMode="fixed"
        app:tabTextAppearance="@style/TabText">

        <com.google.android.material.tabs.TabItem
            android:id="@+id/tab_articoli"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:scrollbarSize="10sp"
            android:text="@string/tab_articoli" />

        <com.google.android.material.tabs.TabItem
            android:id="@+id/tab_carichi"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:scrollbarSize="10sp"
            android:text="@string/tab_carichi" />

    </com.google.android.material.tabs.TabLayout>

    <FrameLayout
        android:id="@+id/frame_layout"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tab_layout">

    </FrameLayout>


</androidx.constraintlayout.widget.ConstraintLayout>